--- a/index.html
+++ b/index.html
@@ -10,86 +10,83 @@
     <link rel="stylesheet" href="assets/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/police.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12">
+                <img class="img-responsive img-rounded" src="http://san.imatin.net/images/photodeprofilmefiance.jpg" alt="photo de profil">
+            </div>
+        </div>
+    </div>
+
     <div class="container margeTop">
         <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 hidden-xs">
                 <img class="img-responsive img-rounded" src="http://san.imatin.net/images/photodeprofilmefiance.jpg" alt="photo de profil">
             </div>
             <!-- <div class="conteneur"> -->
-            <div class="col-lg-8">
+            <div class="col-lg-8 col-xs-12">
                 <div class="row">
-                    <div class="col-lg-10 nP">
+                    <div class="col-lg-10 col-xs-12 nP">
                         <p>Pol Mickael</p>
                     </div>
-                    <a href="">
-                        <div class="col-lg-2 np2 text-center">
-                            <span class="glyphicon glyphicon-save"></span>
+                    <a download="file:///home/micka/html_css/CV_Bootstrap_3/index.html" href="">
+                        <div class="col-lg-2 col-xs-12 np2 text-center">
+                            <i class="fa fa-download" aria-hidden="true"></i>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-8 col-xs-12">
                 <div class="row">
-                    <div class="col-lg-10 poste np4 nP">
+                    <div class="col-lg-10 col-xs-12 poste np4 nP">
                         <p>Developpeur Logiciel junior</p>
                     </div>
-                    <a href="">
-                        <div class="col-lg-2 np3 text-center">
-                            <img class="img-responsive tailleGit" src="https://icon-icons.com/icons2/910/PNG/512/github-2_icon-icons.com_71185.png" alt="">
+                    <a target="blank" href="https://github.com/mickaelpol?tab=repositories">
+                        <div class="col-lg-2 col-xs-12 np3 text-center">
+                            <i class="fa fa-github" aria-hidden="true"></i>
+                            <!-- <img class="img-responsive tailleGit" src="https://icon-icons.com/icons2/910/PNG/512/github-2_icon-icons.com_71185.png" alt="image github"> -->
                         </div>
                     </a>
                 </div>
             </div>
 
-            <div class="col-lg-8 col-lg-offset-4">
+            <div class="col-lg-8 col-lg-offset-4 col-xs-12">
                 <div class="text-center text-uppercase">
                     <div class="row">
                         <a href="">
-                            <div class="col-lg-2 vert">
+                            <div class="col-lg-3 col-xs-12 vert">
                                 <span class="glyphicon glyphicon-home"></span>
                                 </br>
                                 <small>home</small>
                             </div>
                         </a>
                         <a href="">
-                            <div class="col-lg-2 bleu">
+                            <div class="col-lg-3 col-xs-12 bleu">
                                 <span class="glyphicon glyphicon-education"></span>
                                 </br>
                                 <small>resume</small>
                             </div>
                         </a>
                         <a href="">
-                            <div class="col-lg-2 violet">
+                            <div class="col-lg-3 col-xs-12 violet">
                                 <span class="glyphicon glyphicon-briefcase"></span>
                                 </br>
                                 <small>portfolio</small>
                             </div>
                         </a>
                         <a href="">
-                            <div class="col-lg-2 orange">
+                            <div class="col-lg-3 col-xs-12 orange">
                                 <span class="glyphicon glyphicon-map-marker"></span>
                                 </br>
                                 <small>contacts</small>
                             </div>
                         </a>
-                        <a href="">
-                            <div class="col-lg-2 rouge">
-                                <span class="glyphicon glyphicon-headphones"></span>
-                                </br>
-                                <small>feedback</small>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="col-lg-2 jaune">
-                                <span class="glyphicon glyphicon-pencil"></span>
-                                </br>
-                                <small>blog</small>
-                            </div>
-                        </a>
+                        
                     </div>
                 </div>
             </div>
@@ -201,7 +198,7 @@
             <div class="col-lg-4 xP">
                 <h2 class="text-uppercase ">
                     experiences pro
-                </h2> 
+                </h2>
                 </br>
                 <blockquote>
                     <small class="date">02/2015</small>
@@ -215,7 +212,7 @@
 
                     <small class="date">02/2015</small>
                     <p class="xpDate">employé de service</p>
-                    
+
                     <small class="date">02/2015</small>
                     <p class="xpDate">employé de service</p>
                 </blockquote>
